--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,8 @@ hamburger
   text-transform: capitalize;
   isolation: isolate;
   position: relative;
-  min-width: 10rem;
+  width: 10rem;
+  min-width: 6rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -3942,33 +3943,15 @@ hamburger
   display: block;
 }
 .about .col-right .article-container article .about-intro p a {
-  background-color: #f4f4f4;
-  color: #1f252d;
+  margin-top: 0.5rem;
   font-weight: 500;
-  display: inline-block;
-  width: max-content;
-  border-radius: 0.25rem;
+  padding: 0.5rem 0.5rem;
   transition: 0.2s;
+  font-size: 0.85rem;
+  width: 8rem;
 }
-.about .col-right .article-container article .about-intro p a.cv {
-  background-color: #1f252d;
+.about .col-right .article-container article .about-intro p a i {
   color: #f4f4f4;
-  padding: 0 0.25rem;
-}
-.about .col-right .article-container article .about-intro p a.cv:hover {
-  color: #b3bfcb;
-}
-@media (max-width: 820px) {
-  .about .col-right .article-container article .about-intro p a:active {
-    color: #b3bfcb;
-    background: #15191e;
-  }
-}
-@media (min-width: 820px) {
-  .about .col-right .article-container article .about-intro p a:hover {
-    color: #b3bfcb;
-    background: #15191e;
-  }
 }
 .about .col-right .article-container article .about-intro p.intro {
   font-weight: 500;
@@ -3983,18 +3966,6 @@ hamburger
   margin-right: 0.1em;
   border-radius: 0.25rem;
   box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.1);
-}
-.about .col-right .article-container article .about-intro p i {
-  font-size: 2rem;
-  color: hwb(211 28% 61%);
-  margin-right: 0.05rem;
-  display: block;
-  margin-bottom: 0.5rem;
-}
-@media (min-width: 768px) {
-  .about .col-right .article-container article .about-intro p i {
-    font-size: 2rem;
-  }
 }
 .about .col-right .article-container article .buttons-container {
   padding: 0;
@@ -4019,10 +3990,15 @@ hamburger
   font-size: clamp(1rem, 4vw, 1.125rem);
 }
 .about .col-right .article-container article .article-body .body-item a {
+  display: block;
   color: inherit;
+  margin-bottom: 1rem;
 }
 .about .col-right .article-container article .article-body .body-item a:hover {
   color: #dc143c;
+}
+.about .col-right .article-container article .article-body .body-item p {
+  font-weight: 500;
 }
 .about .col-right .article-container article .article-body .body-item::after {
   content: "";
