--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -192,34 +192,16 @@
                         }
     
                         a {
-                            background-color: #f4f4f4;
-                            color: $overlay-blue-darker;
-                            font-weight: 500;
-                            display: inline-block;
-                            width: max-content;
-                            border-radius: .25rem;
-                            transition: .2s;
                             // border: 2px solid red;
-    
-                            &.cv {
-                                background-color: $overlay-blue-darker;
+                            margin-top: .5rem;
+                            font-weight: 500;
+                            padding: .5rem .5rem;
+                            transition: .2s;
+                            font-size: .85rem;
+                            width: 8rem;
+                            i {
+                                // font-size: inherit;
                                 color: $text-light;
-                                padding: 0 .25rem;
-                                &:hover {
-                                    color: $brand;
-                                }
-                            }
-                            @media (max-width: 820px){
-                                &:active {
-                                    color: $brand;
-                                    background: $overlay-blue-darkest;
-                                }
-                            }
-                            @media (min-width: 820px){
-                                &:hover {
-                                    color: $brand;
-                                    background: $overlay-blue-darkest;
-                                }
                             }
                         }
                         // CAPITAL B FIRST LETTER
@@ -239,17 +221,6 @@
                             }
                         }
                         
-                        i {
-                            // position: absolute;
-                            font-size: 2rem;
-                            color: $overlay-blue-light;
-                            margin-right: .05rem;
-                            display: block;
-                            margin-bottom: .5rem;
-                            @include md {
-                                font-size: 2rem;
-                            }
-                        }
                         
                     }
                 }
@@ -280,10 +251,15 @@
                             font-size: clamp(1rem, 4vw, 1.125rem);
                         }
                         a {
+                            display: block;
                             color: inherit;
+                            margin-bottom: 1rem;
                             &:hover {
                                 color: $span-crimson;
                             }
+                        }
+                        p {
+                            font-weight: 500;
                         }
                         // ITEM BOTTOM BORDER
                         &::after {
