--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -328,8 +328,8 @@ hamburger
     text-transform: capitalize;
     isolation: isolate;
     position: relative;
-    // width: max-content;
-    min-width: 10rem;
+    width: 10rem;
+    min-width: 6rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
