--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -235,45 +235,41 @@
                     // border: 2px solid purple;
                     color: $overlay-blue-darker;
                     margin-top: 5vh;
-                    
                     .body-item {
                         // border: 2px solid yellow;
                         padding-bottom: .5rem;
                         margin-bottom: 5vh;
                         position: relative;
+                        border-bottom: 1px solid $brand;
+                        @include lg {
+                            margin-bottom: 10vh;
+                        }
                         i {
                             font-size: 2rem;
                             margin-bottom: .25rem;
+                            color: $overlay-blue-dark;
                         }
                         .body-item-title {
+                            color: $overlay-blue-dark;
                             margin-bottom: .5rem;
                             font-size: 1rem;
                             font-size: clamp(1rem, 4vw, 1.125rem);
                         }
+
+                        p {
+                            margin: .5rem 0;
+                            font-weight: 400;
+                        }
+
                         a {
                             display: block;
                             color: inherit;
-                            margin-bottom: 1rem;
                             &:hover {
                                 color: $span-crimson;
                             }
-                        }
-                        p {
-                            font-weight: 500;
-                        }
-                        // ITEM BOTTOM BORDER
-                        &::after {
-                            content: '';
-                            position: absolute;
-                            bottom: 0;
-                            left: 0;
-                            width: 100%;
-                            border-radius: .5rem;
-                            height: .1rem;
-                            opacity: .4;
-                            background: linear-gradient(90deg, #f4f4f4, $overlay-blue-light, #f4f4f4);
-                            background: linear-gradient(90deg, hsl(240, 100%, 5%), hwb(0 96% 4%));
-                            @include md {
+                            i {
+                                font-size: 1rem;
+                                margin-right: .5rem;
                             }
                         }
                     }
