about links width

--- a/css/style.css
+++ b/css/style.css
@@ -4007,6 +4007,7 @@ hamburger
 }
 .about .col-right .article-container article .article-body .body-item a {
   display: block;
+  width: max-content;
   color: inherit;
 }
 .about .col-right .article-container article .article-body .body-item a:hover {
