--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -263,6 +263,8 @@
 
                         a {
                             display: block;
+                            width: max-content;
+                            // border: 2px solid red;
                             color: inherit;
                             &:hover {
                                 color: $span-crimson;
