--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -240,7 +240,7 @@
                         padding-bottom: .5rem;
                         margin-bottom: 5vh;
                         position: relative;
-                        border-bottom: 1px solid $brand;
+                        border-bottom: 1px solid $overlay-blue-light;
                         @include lg {
                             margin-bottom: 10vh;
                         }
