--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -636,7 +636,7 @@ hamburger
                 animation-timing-function: ease-in-out;
             }
             &.sector-2 {
-                border-right-color: $span-gold;
+                border-right-color: $brand;
                 animation-duration: 2s;
                 animation-timing-function: ease-in;
 
