--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,3 @@
-// @import url('https://fonts.googleapis.com/css2?family=Gruppo&family=Montserrat:wght@200;400;500;700&family=Philosopher:wght@400;700&family=Shippori+Mincho:wght@700&family=Source+Code+Pro:wght@200;300;400&family=Ubuntu:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&family=Montserrat:wght@100;200;400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
 @import 'variables';
@@ -18,21 +17,15 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    // border: 1px solid red;
 }
 
 
 html {
     scroll-behavior: smooth;
-    font-family: $font-content;
-    // scroll-padding-top: 5vh;
 }
 body {
-    font-family: "Montserrat", sans-serif;
-    overflow-x: hidden;
-    width: 100%;
-    
-
+    font-family: $font-content;
+    color: $overlay-blue-darker;
     a {
         text-decoration: none;
         transition: .25s;
@@ -49,8 +42,7 @@ body {
     }
 
     p {
-        color: #000;
-        color: $overlay-blue-darkest;
+        // color: $overlay-blue-darkest;
         line-height: 1.5;
         font-weight: 400;
     }
