footer icons color

--- a/css/style.css
+++ b/css/style.css
@@ -4440,7 +4440,7 @@ hamburger
 #footer .footer .footer-bottom .footer-item .footer-list li i {
   width: 1.5rem;
   transition: 0.25s;
-  color: #ddd;
+  color: #b3bfcb;
 }
 #footer .footer .footer-bottom .footer-item .footer-list li a {
   color: #f4f4f4;
