--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -395,7 +395,7 @@
                         i {
                             width: 1.5rem;
                             transition: .25s;
-                            color: #ddd;
+                            color: $brand;
                         }
                         a {
                             color: $text-light;
