--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -31,7 +31,7 @@ $brand-border: hsla(210, 19%, 75%, .5);
 
 $span-crimson: #dc143c;
 $span-gold: #ead2a1;
-$span-light: #fff9;
+$span-light: hsl(210, 19%, 75%);
 $light-span: #fff9;
 $span-brand: #f72751;
 $span-violet: violet;
