--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -69,7 +69,7 @@
                 //     gap: 1rem;
                 // }
                 .title {
-                    // border: 2px solid blue;
+                    // border: 2px solid yellow;
                     display: flex;
                     flex-direction: column-reverse;
                     align-items: left;
@@ -81,9 +81,6 @@
                     border-top-right-radius: 0;
                     border-bottom-right-radius: 0;
 
-                    @include sm {
-                        border-radius: .5rem;
-                    }
 
                     @include md {
                         flex-basis: 40%;
@@ -147,6 +144,7 @@
                     }
 
                     h3 {
+                        // display: none;
                         color: $text-light;
                         color: $brand;
                         font-size: .85rem;
