page-skill-section links and padding

--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -677,7 +677,7 @@
 
     .skill-section-title {
         // border: 1px solid red;
-        padding: 5vh 5vw;
+        padding: 8vh 5vw;
         position: relative;
         isolation: isolate;
         height: 90vh;
@@ -993,6 +993,7 @@
 
         .skill-section-title {
             margin-bottom: 10vh;
+            padding: 10vh 5vw 5vh;
         }
     }
 }
