--- a/css/style.css
+++ b/css/style.css
@@ -2414,7 +2414,7 @@ hamburger
   border-bottom: none;
 }
 .skill-section .skill-section-title {
-  padding: 5vh 5vw;
+  padding: 8vh 5vw;
   position: relative;
   isolation: isolate;
   height: 90vh;
@@ -2686,6 +2686,7 @@ hamburger
 }
 .skill-section.page-skill-section .skill-section-title {
   margin-bottom: 10vh;
+  padding: 10vh 5vw 5vh;
 }
 
 .contact {
@@ -3069,24 +3070,6 @@ hamburger
   color: #f4f4f4;
   position: relative;
   isolation: isolate;
-}
-#projects .projects .all-projects .project-item .project-tile .project-info a::before, #projects .projects .all-projects .project-item .project-tile .project-info a::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transition: 0.25s;
-  border-radius: 0.5rem;
-  z-index: -1;
-}
-#projects .projects .all-projects .project-item .project-tile .project-info a::before {
-  background: linear-gradient(0deg, #750b20, #dd134c);
-}
-#projects .projects .all-projects .project-item .project-tile .project-info a::after {
-  background: linear-gradient(0deg, #dc134c, #750b20);
-  opacity: 0;
 }
 #projects .projects .all-projects .project-item .project-tile .project-info a i {
   color: #b3bfcb;
