--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -64,6 +64,7 @@ $overlay-blue-dark:hsl(212, 19%, 20%);
 $overlay-blue-dark-trans:rgba(34, 41, 49, 0.9);
 $overlay-blue-darker:hsl(214, 18%, 15%);
 $overlay-blue-darkest:hsl(213, 18%, 10%);
+$overlay-black:hsl(213, 18%, 1%);
 $overlay-blue-light: hwb(211 28% 61%);
 $nav-background: #29323c;
 $nav-active-background: #1b2127;
