about links i color

--- a/css/style.css
+++ b/css/style.css
@@ -4022,6 +4022,7 @@ hamburger
   color: inherit;
 }
 .about .col-right .article-container article .article-body .body-item a i {
+  color: #dc143c;
   font-size: 1rem;
   margin-right: 0.5rem;
   transition: 0.25s;
