--- a/css/style.css
+++ b/css/style.css
@@ -3989,7 +3989,7 @@ hamburger
   color: inherit;
 }
 .about .col-right .article-container article .article-body .body-item a i {
-  color: #dc143c;
+  color: #bb1133;
   font-size: 1rem;
   margin-right: 0.5rem;
   transition: 0.25s;
