--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -265,7 +265,7 @@
                             // border: 2px solid red;
                             color: inherit;
                             i {
-                                color: $span-crimson;
+                                color: $link-crimson;
                                 font-size: 1rem;
                                 margin-right: .5rem;
                                 transition: .25s;
