--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -43,7 +43,9 @@ $trans-border: rgba(255, 255, 255, 0.155);
 // link colors
 $link-gold: #ead2a1;
 $link-blue: skyblue;
-$link-crimson: #dc143c;
+$link-crimson: hsl(348, 83%, 40%);
+$overlay-blue-darker:hsl(214, 18%, 15%);
+
 $dark-crimson:#b60f30;
 // background colors
 $background-light: #fff;
