--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -711,7 +711,7 @@
             margin-bottom: 1rem;
         }
         p {
-            width: 80%;
+            // width: 80%;
             color: inherit;
 
             &::first-letter {
@@ -719,7 +719,7 @@
             }
 
             @include md {
-                width: 60%;
+                // width: 60%;
                 font-size: 1.15rem;
             }
         }
