--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -739,16 +739,9 @@
             margin-top: 1rem;
             width: 10rem;
             font-weight: 600;
-            // display: flex;
-            // justify-content: space-between;
-            // text-transform: capitalize;
-            // color: $text-light;
-            // width: 8rem;
-            // width: clamp(10rem, 35vw, 12rem);
-            // margin: 1rem 0;
-            // padding: .8rem 1rem;
-            // border-radius: .25rem;
-            // box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
+
+            // position: absolute;
+            // bottom: 10vh;
 
         }
         img {
@@ -1004,7 +997,7 @@
         }
         .skill-section-content {
             .skill-article {
-                background: $overlay-blue-darkest;
+                background: $overlay-blue-darker;
             }
             ul {
                 li {
