--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -912,7 +912,8 @@
                     padding-bottom: .25rem;
                     margin-bottom: .5rem;
                     text-transform: capitalize;
-                    font-size: .95rem;
+                    font-size: .85rem;
+                    font-size: clamp(.85rem, 1.5vw, 1rem );
                     list-style: none;
                     border-bottom: 1px solid $overlay-blue-darkest;
                     
