--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -737,7 +737,8 @@
         }
         .btn {
             margin-top: 1rem;
-            width: 10rem;
+            width: 12rem;
+            width: clamp(12rem, 40vw, 12rem);
             font-weight: 600;
 
             // position: absolute;
