--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -437,7 +437,7 @@ hamburger
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    padding: .125rem 5vw;
+    padding: .25rem 5vw;
     transform: translateY(15vh);
     transition: 1s;
 
@@ -485,9 +485,9 @@ hamburger
         // LINK ITEM HOVER STATE 
 
         @media (max-width: 768px) {
-            &:active {
+            &:hover {
                 a {
-                    background: $overlay-blue-light;
+                    background: $overlay-blue-dark;
                 }
                 i {
                     color: $text-light;
